# MTPL

./: .gitignore
Doc/: MTPLArchitecture.md
MTPL/Src/: CMakeLists.txt  main.cpp
MTPL/Src/IntermediateCodeGenerator/: CMakeLists.txt  intermediateCodeGenerator.cpp  intermediateCodeGenerator.hpp
MTPL/Src/LexicalAnalyzer/: CMakeLists.txt  Lexical.md  inputBuffer.cpp  inputBuffer.hpp  lexicalAnalyzer.cpp  lexicalAnalyzer.hpp  recognizer.hpp
MTPL/Src/LexicalAnalyzer/Recognizer/: CMakeLists.txt  finiteAutomata.md  recognizer.cpp  recognizer.hpp
MTPL/Src/Lib/: CMakeLists.txt  errors.hpp  token.cpp  token.hpp  types.hpp
MTPL/Src/ParserAnalyzer/: CMakeLists.txt
MTPL/Src/SemanticAnalyzer/: CMakeLists.txt  semanticAnalyzer.cpp  semanticAnalyzer.hpp
MTPL/Src/SymbolTable/: CMakeLists.txt  symbolTable.cpp  symbolTable.hpp
MTPL/Src/VirtualMachine/: CMakeLists.txt
